# MultiLadderOperation

./: .gitignore  AlpideConfig.h  AlpideDecoder.cpp  AlpideDecoder.h  AlpideDictionary.h  BoardDecoder.cpp  BoardDecoder.h  ConfigMFTladderMOSAIC.cfg  ConfigMFTladder_DigitalScan.cfg  ConfigMFTladder_FIFOtest.cfg  ConfigSingleChipMOSAIC.cfg  ConfigSingleChipMOSAIC_FIFOtest.cfg  ConfigTemplate.cfg  Makefile  README.md  SetupHelpers.cpp  SetupHelpers.h  TAlpide.cpp  TAlpide.h  TBoardConfig.cpp  TBoardConfig.h  TBoardConfigDAQ.cpp  TBoardConfigDAQ.h  TBoardConfigMOSAIC.cpp  TBoardConfigMOSAIC.h  TBoardDecoder.cpp  TBoardDecoder.h  TChip.cpp  TChip.h  TChipConfig.cpp  TChipConfig.h  TConfig.cpp  TConfig.h  TDevice.cpp  TDevice.h  TDeviceBuilder.cpp  TDeviceBuilder.h  TDeviceBuilderHalfStave.cpp  TDeviceBuilderHalfStave.h  TDeviceBuilderIB.cpp  (+58 more)
MosaicSrc/: TAlpideDataParser.cpp  controlinterface.cpp  controlinterface.h  ipbus.h  ipbusudp.cpp  mboard.cpp  mboard.h  mruncontrol.cpp
MosaicSrc/libmosaic/include/: ipbus.h  mdatareceiver.h
MosaicSrc/libmosaic/src/: ipbus.cpp  mboard.cpp
analysis/: NoiseOccupancyRawToHisto.C
analysis/classes/: AliPALPIDEFSRawStreamMS.cpp  compile_classes.C
analysis/monitoring/: monitoring_main.C
framework/: .gitignore  CMakeLists.txt
framework/analysis/: Hitmap.C  ThresholdMap.C  scanDACs.C
framework/analysis/classes/: AliPALPIDEFSRawStreamMS.h  load_classes.C
framework/analysis/clustering/: analysis_basic.C  x_csa.C
framework/analysis/monitoring/: monitoring_palpidefs.C
framework/config/: Config.cfg  ConfigIBtelescope_DigitalScan.cfg  ConfigIBtelescope_FIFOtest.cfg  ConfigIBtelescope_NoiseOccScan.cfg  ConfigIBtelescope_ThresholdScan.cfg  ConfigMFTladderMOSAIC.cfg  ConfigMFTladder_DigitalScan.cfg  ConfigMFTladder_FIFOtest.cfg  ConfigMFTladder_NoiseOccScan.cfg  ConfigMFTladder_NoiseOccScan_ext.cfg  ConfigMFTladder_NoiseOccScan_ext_BB3.cfg  ConfigMFTladder_ThresholdScan.cfg  ConfigMFTladder_ThresholdScan_BB3.cfg  ConfigSingleChipMOSAIC.cfg  ConfigSingleChipMOSAIC_FIFOtest.cfg
framework/config/multiboard/: ConfigIBtelescope_DigitalScan.cfg  ConfigIBtelescope_NoiseOccScan.cfg  ConfigIBtelescope_NoiseOccScan_ext.cfg  ConfigMFTladder_DigitalScan_ladder1.cfg  ConfigMFTladder_DigitalScan_ladder2.cfg  ConfigMFTladder_DigitalScan_ladder3.cfg  ConfigMFTladder_NoiseOccScan_ext_ladder1.cfg  ConfigMFTladder_NoiseOccScan_ext_ladder2.cfg  ConfigMFTladder_NoiseOccScan_ext_ladder3.cfg  ConfigMFTladder_NoiseOccScan_ladder1.cfg  ConfigMFTladder_NoiseOccScan_ladder1_BB3.cfg  ConfigMFTladder_NoiseOccScan_ladder2.cfg  ConfigMFTladder_NoiseOccScan_ladder2_BB3.cfg  ConfigMFTladder_NoiseOccScan_ladder3.cfg  ConfigMFTladder_NoiseOccScan_ladder3_BB3.cfg
framework/exe/: main_dacscan.cpp  main_digitalscan.cpp  main_fifo.cpp  main_mosaic.cpp  main_multi_digitalscan.cpp  main_multi_noiseocc.cpp  main_multi_noiseocc_ext.cpp  main_multi_noiseocc_ext_BB3.cpp  main_multi_noiseocc_int.cpp  main_multi_noiseocc_int_BB3.cpp  main_noiseocc.cpp  main_roottest.cpp  main_temperature.cpp  main_thresholdscan.cpp
framework/src/common/: CMakeLists.txt  Common.cpp  Common.h  TVerbosity.cpp  TVerbosity.h
framework/src/manager/: AlpideDictionary.h  CMakeLists.txt  TAlpide.cpp  TAlpide.h  TAlpideDecoder.cpp  TAlpideDecoder.h  TBoardConfig.cpp  TBoardConfig.h  TBoardConfigMOSAIC.cpp  TBoardConfigMOSAIC.h  TBoardDecoder.cpp  TBoardDecoder.h  TChipConfig.cpp  TChipErrorCounter.cpp  TChipErrorCounter.h  TDevice.cpp  TDevice.h  TDeviceBuilder.cpp  TDeviceBuilder.h  TDeviceBuilderHalfStave.cpp  TDeviceBuilderIB.cpp  TDeviceBuilderIB.h  TDeviceBuilderIBSingleMosaic.cpp  TDeviceBuilderMFTLadder.cpp  TDeviceBuilderMFTLadder.h  TDeviceBuilderOB.cpp  TDeviceBuilderOBSingleDAQ.cpp  TDeviceBuilderOBSingleMosaic.cpp  TDeviceBuilderTelescopeDAQ.cpp  TDeviceBuilderWithDAQBoards.cpp  TDeviceBuilderWithDAQBoards.h  TDeviceChipVisitor.cpp  TDeviceChipVisitor.h  TDeviceDigitalScan.cpp  TDeviceDigitalScan.h  TDeviceFifoTest.cpp  TDeviceFifoTest.h  TDeviceHitScan.cpp  TDeviceHitScan.h  TDeviceMaskScan.cpp  (+38 more)
framework/src/mosaic/: CMakeLists.txt  TAlpideDataParser.cpp  TAlpideDataParser.h  alpidercv.cpp  controlinterface.cpp  controlinterface.h  genconsumer.cpp  i2cbus.cpp  i2cbus.h  i2cslave.cpp  i2cslave.h  i2csyspll.cpp  i2csyspll.h  ipbus.cpp  ipbus.h  ipbusudp.cpp  ipbusudp.h  mboard.cpp  mboard.h  mcoordinator.cpp  mcoordinator.h  mdatagenerator.cpp  mdatagenerator.h  mdatareceiver.cpp  mdatareceiver.h  mdatasave.cpp  mdatasave.h  mdictionary.h  mexception.cpp  mexception.h  mruncontrol.cpp  mruncontrol.h  mservice.cpp  mservice.h  mtriggercontrol.cpp  mtriggercontrol.h  mwbb.h  mwbbslave.cpp  mwbbslave.h  pulser.cpp  (+5 more)
framework/src/obsolete/: AlpideDecoder.h  BoardDecoder.h  Makefile  SetupHelpers.cpp  SetupHelpers.h  TConfig.cpp  TThresholdScan.cpp  TThresholdScan.h
inc/: TConfig.h
src/: BoardDecoder.cpp  TBoardConfigDAQ.cpp
